<resources>
    <string name="app_name">Classify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meditate">Meditate</string>
    <string name="schedule">Schedule</string>
    <string name="pet_care">Pet Care</string>
    <string name="inhale">Inhale…</string>
    <string name="exhale">Exhale…</string>
    <string name="hold">Hold…</string>
    <string name="empty_timer">00:00</string>
    <string name="end">End</string>
    <string name="meditation">Meditation</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="how_many_minutes_would_you_like_to_meditate">How many minutes would you like to meditate?</string>
    <string name="_5">5</string>
    <string name="version">Version 1.0.1</string>
    <string name="about_us">\t\t\tHello, we\'re a small team from Western Washington University who made
        this app as our final project for CSCI412 - Android App Development. Our team members are
        Derrick, Bec, and Di. Bec and Di are graduating Spring 2022 and Derrick is graduating
        Fall 2022. \n\t\t\tOur shared love of games and a need for an organizing app made this app
        come to fruition. We hope you enjoy it!</string>
    <string-array name="lone_priority_array">
        <item>1</item>
    </string-array>
</resources>